--- a/css/style.css
+++ b/css/style.css
@@ -23,9 +23,8 @@ object {
   width: 100vw; }
 
 .copy-container {
-  background-color: rgba(229, 229, 229, 0.5);
-  z-index: 1;
-  position: absolute; }
+  background-color: rgba(229, 229, 229, 0);
+  z-index: 1; }
 
 h1 {
   font-family: macklin;
@@ -37,7 +36,8 @@ h1 {
 h2 {
   font-family: gotham;
   font-weight: 900;
-  color: #333033; }
+  color: #333033;
+  font-size: 36px; }
 
 h3 {
   font-family: macklin;
@@ -281,7 +281,9 @@ footer {
   z-index: -100; }
 
 #container-2 {
-  padding: 0; }
+  padding-top: 15vh;
+  padding-left: 0;
+  padding-right: 0; }
   #container-2 svg {
     position: absolute;
     z-index: 1; }
@@ -306,12 +308,14 @@ footer {
     height: 100%;
     width: auto; }
   #container-2 .copy-container {
-    min-height: 43vh;
-    margin-top: -5vh;
-    padding-top: 7vh;
-    padding-bottom: 4vh; }
+    padding-top: 5vh;
+    padding-bottom: 5vh; }
   #container-2 h2 {
     padding-bottom: 1.5vh; }
+  #container-2 a {
+    float: left; }
+  #container-2 p {
+    text-align: justify; }
 
 #container-3 {
   padding: 0; }
@@ -442,7 +446,48 @@ footer {
 .reveal-container {
   margin-top: 15vh; }
 
+.featured-projects {
+  padding-top: 15vh;
+  float: left; }
+
 /* ends reveal section */
+#featured-projects {
+  padding-top: 10vh; }
+  #featured-projects .container-p {
+    padding: 5px;
+    float: left !important; }
+  #featured-projects .portfolio-list {
+    box-shadow: 0px 0px 5px #DBDADA;
+    float: left;
+    height: 25vh; }
+    #featured-projects .portfolio-list a {
+      text-decoration: none; }
+    #featured-projects .portfolio-list img {
+      width: 100%; }
+    #featured-projects .portfolio-list h3 {
+      font-family: gotham;
+      color: #333033;
+      font-size: 18px;
+      padding-left: 15px;
+      padding-top: 15px;
+      margin: 0;
+      font-style: normal; }
+    #featured-projects .portfolio-list p {
+      font-size: 14px;
+      font-family: gotham;
+      padding-left: 15px;
+      color: #333033;
+      padding-bottom: 15px;
+      margin: 0; }
+  #featured-projects .portfolio-image-container {
+    min-height: 75%;
+    height: 55% !important;
+    overflow: hidden; }
+    #featured-projects .portfolio-image-container img {
+      width: 100%;
+      height: auto; }
+
+/* CLOSE FEATURED PROJECTS */
 /* ENDS HOME */
 /* ----------------------------------------------------------------- */
 /* BEGINS WHAT WE DO */
