--- a/css/style.scss
+++ b/css/style.scss
@@ -42,9 +42,8 @@ object{
 }
 
 h1{
-font-family: macklin;
+font-family: gotham;
 font-weight: 900;
-font-style: italic;
 color: black;
 font-size: 40px;
 }
@@ -54,6 +53,7 @@ font-family: gotham;
 font-weight: 900;
 color: $black;
 font-size: 36px;
+line-height: 34px;
 }
 
 h3{
@@ -79,6 +79,10 @@ p{
 font-family: gotham;
 font-size: 14px;
 
+}
+
+#left-align{
+  text-align: left!important;
 }
 
 .green-underline{
@@ -645,7 +649,7 @@ padding: 0;
 .portfolio-list{
   box-shadow: 0px 0px 5px #DBDADA;
   float: left;
-  height: 25vh;
+  height: 27.5vh;
   a{
     text-decoration: none;
   }
@@ -657,7 +661,7 @@ padding: 0;
     color: $black;
     font-size: 18px;
     padding-left: 15px;
-    padding-top: 15px;
+    padding-top: 10px;
     margin: 0;
     font-style: normal;
   }
@@ -672,8 +676,8 @@ padding: 0;
 }
 
 .portfolio-image-container{
-  min-height: 75%;
-  height: 55%!important;
+  min-height: 82%;
+  height: 82%!important;
   overflow: hidden;
   img{
     width: 100%;
