--- a/css/style.scss
+++ b/css/style.scss
@@ -45,7 +45,8 @@ h1{
 font-family: gotham;
 font-weight: 900;
 color: black;
-font-size: 40px;
+font-size: 36px;
+text-transform: uppercase;
 }
 
 h2{
@@ -579,7 +580,7 @@ padding: 0;
 
 .svg2 {
   position: fixed;
-  animation: scale 1s linear infinite;
+  animation: scale2 1s linear infinite;
   animation-play-state: paused;
   animation-delay: calc(var(--scroll) * -.01s);
   animation-iteration-count: 1;
@@ -596,7 +597,7 @@ padding: 0;
 
 @keyframes scale2 {
   to {
-      transform: scale(16000) translateY(1200px);
+      transform: scale(16000) translateY(1200px) translateX(500px);
 
   }
 }
@@ -692,6 +693,29 @@ padding: 0;
 
 
 /* ENDS HOME */
+
+/* ----------------------------------------------------------------- */
+
+/* BEGINS WHO WE ARE */
+#who-we-are{
+.animated-container{
+  height: 27vh;
+  padding-left: 30px;
+  padding-right: 30px;
+  padding-top: 50px;
+  box-shadow: 0px 0px 5px #DBDADA;
+}
+
+.container-p{
+    padding: 5px;
+    float: left!important;
+}
+.featured{
+  padding-top: 10vh;
+}
+
+}
+/* ENDS WHO WE ARE */
 
 /* ----------------------------------------------------------------- */
 
