--- a/css/style.css
+++ b/css/style.css
@@ -114,6 +114,15 @@ p {
   text-align: center;
   margin-top: 2vh; }
 
+.green-bg {
+  background-color: #C2D500; }
+
+.turquoise-bg {
+  background-color: #00AC98; }
+
+.orange-bg {
+  background-color: #F26524; }
+
 /* SNAP SCROLL */
 .scroll-container {
   height: 100vh;
@@ -500,8 +509,27 @@ footer {
   padding-left: 30px;
   padding-right: 30px;
   padding-top: 50px;
-  box-shadow: 0px 0px 5px #DBDADA; }
+  box-shadow: 0px 0px 5px #DBDADA;
+  z-index: 0;
+  position: relative; }
+#who-we-are .text-reveal {
+  opacity: 0;
+  position: absolute;
+  height: 100%;
+  width: 100%;
+  margin-top: -50px;
+  margin-left: -30px;
+  padding: 15px;
+  transition: .5s; }
+  #who-we-are .text-reveal h3 {
+    color: white;
+    text-align: center;
+    margin-top: 20%; }
+#who-we-are .container-p:hover .text-reveal {
+  opacity: 1;
+  z-index: 1; }
 #who-we-are .container-p {
+  position: relative;
   padding: 5px;
   float: left !important; }
 #who-we-are .featured {
