--- a/css/style.scss
+++ b/css/style.scss
@@ -146,6 +146,18 @@ font-size: 14px;
   text-align: center;
   margin-top: 2vh;
 }
+
+.green-bg{
+  background-color: $green;
+}
+
+.turquoise-bg{
+  background-color: $turquoise;
+}
+
+.orange-bg{
+  background-color: $orange;
+}
 /* SNAP SCROLL */
 
 .scroll-container {
@@ -704,9 +716,39 @@ padding: 0;
   padding-right: 30px;
   padding-top: 50px;
   box-shadow: 0px 0px 5px #DBDADA;
+  z-index: 0;
+  position: relative;
+}
+
+
+
+.text-reveal{
+  opacity: 0;
+  position: absolute;
+  height: 100%;
+  width: 100%;
+  margin-top: -50px;
+  margin-left: -30px;
+  padding: 15px;
+  transition: .5s;
+  h3{
+    color: white;
+    text-align: center;
+    margin-top: 20%;
+
+  }
+}
+
+
+.container-p:hover{
+.text-reveal{
+  opacity: 1;
+  z-index: 1;
+}
 }
 
 .container-p{
+  position: relative;
     padding: 5px;
     float: left!important;
 }
