--- a/css/style.css
+++ b/css/style.css
@@ -58,7 +58,7 @@ h5 {
 
 p {
   font-family: gotham;
-  font-size: 14px; }
+  font-size: 16px; }
 
 #left-align {
   text-align: left !important; }
@@ -328,7 +328,7 @@ footer {
   #container-2 a {
     float: left; }
   #container-2 p {
-    text-align: justify; }
+    text-align: left; }
 
 #container-3 {
   padding: 0; }
