--- a/css/style.scss
+++ b/css/style.scss
@@ -78,7 +78,7 @@ h5{
 
 p{
 font-family: gotham;
-font-size: 14px;
+font-size: 16px;
 
 }
 
@@ -437,7 +437,7 @@ padding: 0;
       float: left;
     }
     p{
-      text-align: justify;
+      text-align: left;
     }
 }
 
