--- a/css/style.css
+++ b/css/style.css
@@ -30,8 +30,12 @@ h1 {
   font-family: gotham;
   font-weight: 900;
   color: black;
-  font-size: 36px;
+  font-size: 45px;
+  line-height: 40px;
+  padding-bottom: 5px;
   text-transform: uppercase; }
+  h1 .green-underline {
+    border-bottom: 10px solid #C2D500; }
 
 h2 {
   font-family: gotham;
@@ -52,9 +56,11 @@ h4 {
   color: #333033; }
 
 h5 {
-  font-family: gotham;
+  font-family: macklin;
+  font-style: italic;
   font-weight: 900;
-  color: #333033; }
+  color: #333033;
+  float: left; }
 
 p {
   font-family: gotham;
@@ -238,6 +244,13 @@ header {
   header img {
     width: 100%;
     float: left; }
+  header h5 {
+    border-left: 2px solid lightgray;
+    margin-left: 10px;
+    margin-right: 10px;
+    padding-top: 1.5px;
+    padding-left: 17.5px;
+    font-size: 18px; }
 
 /*CLOSES HEADER */
 .dropdown-menu-custom {
@@ -621,7 +634,7 @@ aside {
 #portfolio .portfolio-list {
   box-shadow: 0px 0px 5px #DBDADA;
   float: left;
-  height: 25vh; }
+  height: 35vh; }
   #portfolio .portfolio-list a {
     text-decoration: none; }
   #portfolio .portfolio-list img {
@@ -642,8 +655,8 @@ aside {
     padding-bottom: 15px;
     margin: 0; }
 #portfolio .portfolio-image-container {
-  min-height: 55%;
-  height: 55% !important;
+  min-height: 75%;
+  height: 75% !important;
   overflow: hidden; }
   #portfolio .portfolio-image-container img {
     width: 100%;
