--- a/css/style.scss
+++ b/css/style.scss
@@ -45,8 +45,13 @@ h1{
 font-family: gotham;
 font-weight: 900;
 color: black;
-font-size: 36px;
+font-size: 45px;
+line-height: 40px;
+padding-bottom: 5px;
 text-transform: uppercase;
+.green-underline{
+  border-bottom: 10px solid $green;
+}
 }
 
 h2{
@@ -71,9 +76,11 @@ h4{
 }
 
 h5{
-  font-family: gotham;
+  font-family: macklin;
+  font-style: italic;
   font-weight: 900;
   color: $black;
+  float: left;
 }
 
 p{
@@ -310,6 +317,15 @@ header{
     width: 100%;
     float: left;
   }
+h5{
+  border-left: 2px solid lightgray;
+  margin-left: 10px;
+  margin-right: 10px;
+  padding-top: 1.5px;
+  padding-left: 17.5px;
+  font-size: 18px;
+
+}
 } /*CLOSES HEADER */
 
 .dropdown-menu-custom{
@@ -874,7 +890,7 @@ label{
 .portfolio-list{
   box-shadow: 0px 0px 5px #DBDADA;
   float: left;
-  height: 25vh;
+  height: 35vh;
   a{
     text-decoration: none;
   }
@@ -901,8 +917,8 @@ label{
 }
 
 .portfolio-image-container{
-  min-height: 55%;
-  height: 55%!important;
+  min-height: 75%;
+  height: 75%!important;
   overflow: hidden;
   img{
     width: 100%;
