--- a/css/style.css
+++ b/css/style.css
@@ -33,10 +33,22 @@ h1 {
   font-size: 45px;
   line-height: 40px;
   padding-bottom: 5px;
-  text-transform: uppercase; }
+  text-transform: uppercase;
+  animation-name: delay-opacity;
+  animation-duration: 4s; }
   h1 .green-underline {
     border-bottom: 10px solid #C2D500; }
-
+  h1 .turquoise-underline {
+    border-bottom: 10px solid #00AC98; }
+  h1 .orange-underline {
+    border-bottom: 10px solid #F26524; }
+@keyframes delay-opacity {
+  0% {
+    opacity: 0; }
+  90% {
+    opacity: 0; }
+  100% {
+    opacity: 1; } }
 h2 {
   font-family: gotham;
   font-weight: 900;
