--- a/css/style.scss
+++ b/css/style.scss
@@ -45,8 +45,8 @@ h1{
 font-family: gotham;
 font-weight: 900;
 color: black;
-font-size: 45px;
-line-height: 40px;
+font-size: 40px;
+line-height: 35px;
 padding-bottom: 5px;
 text-transform: uppercase;
 animation-name: delay-opacity;
@@ -148,7 +148,7 @@ font-size: 16px;
   text-decoration: none;
   float: left;
   text-align: center;
-  margin-top: 2vh;
+  margin-top: 0vh;
 }
 
 .link-turquoise{
@@ -812,6 +812,28 @@ padding: 0;
     li{
       font-family: gotham;
       margin-top: 10px;
+    }
+  }
+}
+.services-list{
+  float: left;
+  list-style: none;
+  margin-left: 0;
+  border-top: 1px solid lightgray;
+  padding: 0;
+  margin-top: 2.5vh;
+  li{
+    border-bottom: 1px solid lightgray;
+    float: left;
+    a{
+      float: left;
+      padding-top: 10px;
+      padding-bottom: 10px;
+      color: $black;
+      text-decoration: none;
+    }
+    a:hover{
+      text-decoration: none;
     }
   }
 }
