--- a/css/style.css
+++ b/css/style.css
@@ -695,6 +695,47 @@ aside {
 /* CLOSE PORTFOLIO */
 /* ENDS PORTFOLIO */
 /* ----------------------------------------------------------------- */
+/* BEGINS PROPERTY LANDING */
+#property-landing #container-2 {
+  padding-top: 7vh; }
+#property-landing h2 {
+  margin-top: 0vh;
+  margin-bottom: 0;
+  float: left; }
+#property-landing .carousel {
+  float: left;
+  height: 45vh;
+  background-color: grey;
+  margin-bottom: 2.5vh;
+  float: left; }
+  #property-landing .carousel img {
+    height: 45vh !important;
+    width: auto !important; }
+#property-landing .carousel-inner {
+  height: 45vh !important;
+  overflow: hidden; }
+#property-landing .services-list {
+  float: left;
+  list-style: none;
+  margin-left: 0;
+  border-top: 1px solid lightgray;
+  padding: 0;
+  margin-top: 2.5vh; }
+  #property-landing .services-list li {
+    border-bottom: 1px solid lightgray;
+    float: left; }
+    #property-landing .services-list li a {
+      float: left;
+      padding-top: 10px;
+      padding-bottom: 10px;
+      color: #333033;
+      text-decoration: none; }
+    #property-landing .services-list li a:hover {
+      text-decoration: none; }
+
+/* CLOSES PROPERTY LANDING */
+/* ENDS PROPERTY LANDING */
+/* ----------------------------------------------------------------- */
 /* BEGINS 768PX MEDIA QUERY */
 @media (min-width: 768px) {
   /* BEGINS HEADER 768 */
