--- a/css/style.scss
+++ b/css/style.scss
@@ -972,6 +972,63 @@ label{
 
 /* ----------------------------------------------------------------- */
 
+/* BEGINS PROPERTY LANDING */
+
+
+#property-landing{
+  #container-2{
+    padding-top: 7vh;
+  }
+  h2{
+    margin-top: 0vh;
+    margin-bottom: 0;
+    float: left;
+  }
+  .carousel{
+  float: left;
+  height: 45vh;
+  background-color: grey;
+  margin-bottom: 2.5vh;
+  float: left;
+  img{
+    height: 45vh!important;
+    width: auto !important;
+  }
+}
+.carousel-inner{
+    height: 45vh!important;
+    overflow: hidden;
+}
+
+.services-list{
+  float: left;
+  list-style: none;
+  margin-left: 0;
+  border-top: 1px solid lightgray;
+  padding: 0;
+  margin-top: 2.5vh;
+  li{
+    border-bottom: 1px solid lightgray;
+    float: left;
+    a{
+      float: left;
+      padding-top: 10px;
+      padding-bottom: 10px;
+      color: $black;
+      text-decoration: none;
+    }
+    a:hover{
+      text-decoration: none;
+    }
+  }
+}
+
+} /* CLOSES PROPERTY LANDING */
+
+/* ENDS PROPERTY LANDING */
+
+/* ----------------------------------------------------------------- */
+
 /* BEGINS 768PX MEDIA QUERY */
 
 @media (min-width: 768px){
