--- a/css/style.scss
+++ b/css/style.scss
@@ -171,6 +171,17 @@ font-size: 16px;
   margin-top: 2vh;
 }
 
+.link-outline{
+  border-top: 1px solid lightgray;
+  border-bottom: 1px solid lightgray;
+  padding-top: 10px;
+  padding-bottom: 10px;
+  text-decoration: none;
+  color: $black;
+  font-family: gotham;
+  letter-spacing: 2px;
+}
+
 .green-bg{
   background-color: $green;
 }
@@ -417,6 +428,7 @@ padding: 0;
   }
 }
 
+
 #container-2{
   padding-top: 15vh;
     padding-left: 0;
@@ -474,6 +486,21 @@ padding: 0;
     }
 }
 
+#push-1-mobile{
+  background-image: url('../assets/images/unparalleled-luxe.png');
+  img{
+    position: absolute;
+    float: left;
+    height: auto;
+    width: 300vw;
+    left: -100vw;
+    top: -20vh;
+  }
+}
+
+#push-1-pt2-mobile{
+    background-image: url('../assets/images/unparalleled-luxe.png');
+}
 
 
 
@@ -976,6 +1003,13 @@ label{
 
 
 #property-landing{
+
+#container-1{
+  video{
+    left: -150vw!important;
+  }
+}
+
   #container-2{
     padding-top: 7vh;
   }
