--- a/css/style.scss
+++ b/css/style.scss
@@ -180,12 +180,15 @@ font-size: 16px;
   color: $black;
   font-family: gotham;
   letter-spacing: 2px;
+  p{
+    float: left;
+    margin: 0;
+  }
 
   img{
     width: 12px!important;
     height: auto!important;
     float: left;
-    margin-left: 35%;
       transition: .5s;
   }
 }
@@ -193,8 +196,47 @@ font-size: 16px;
 .link-outline:hover{
   color: $black;
   img{
-    margin-left: 40%;
+    margin-left: 20px;
+    float: left;
   }
+}
+
+.border-bottom{
+  border-bottom: 1px solid lightgray;
+}
+
+.link-outline-2{
+  border-top: 1px solid lightgray;
+  padding-top: 10px;
+  padding-bottom: 10px;
+  text-decoration: none;
+  color: $black;
+  font-family: gotham;
+  letter-spacing: 2px;
+  float: left;
+  p{
+    float: left;
+    margin: 0;
+  }
+
+  img{
+    width: 12px!important;
+    height: auto!important;
+    float: left;
+      transition: .5s;
+  }
+}
+
+.link-outline-2:hover{
+  color: $black;
+  img{
+    margin-left: 20px;
+    float: left;
+  }
+}
+
+.link-container{
+  margin-top: 3vh;
 }
 
 .green-bg{
