--- a/css/style.css
+++ b/css/style.css
@@ -607,6 +607,8 @@ footer {
 /* ENDS HOME */
 /* ----------------------------------------------------------------- */
 /* BEGINS WHO WE ARE */
+#who-we-are .container-p h2 {
+  text-align: center; }
 #who-we-are .animated-container {
   height: 27vh;
   padding-left: 30px;
@@ -856,20 +858,37 @@ aside {
 /* ----------------------------------------------------------------- */
 /* BEGINS 768PX MEDIA QUERY */
 @media (min-width: 768px) {
+  h2 {
+    font-size: 50px;
+    line-height: 50px;
+    margin-bottom: 0; }
+
+  p {
+    margin-top: 0;
+    font-size: 16px;
+    line-height: 26px; }
+
   /* BEGINS HEADER 768 */
-  .dropdown-menu-custom {
+  header h5 {
+    font-size: 30px;
+    padding-top: 5px;
+    padding-bottom: 5px; }
+  header .dropdown-menu-custom {
     padding-top: 5px;
     max-width: 35px;
     height: auto; }
 
+  /* CLOSES HEADER */
   /* ENDS HEADER 768 */
   /* ----------------------------------------------------------------- */
-  #container-2 .image-container {
-    position: relative;
-    margin-top: 7vh;
-    overflow: hidden;
-    height: 50vh;
-    padding: 0; } }
+  #container-2 {
+    padding-top: 25vh; }
+    #container-2 .image-container {
+      position: relative;
+      margin-top: 7vh;
+      overflow: hidden;
+      height: 50vh;
+      padding: 0; } }
 /* !!CLOSES 768PX @MEDIA QUERY!! */
 /* ----------------------------------------------------------------- */
 @media (min-width: 1024px) {
