--- a/css/style.scss
+++ b/css/style.scss
@@ -850,6 +850,14 @@ padding: 0;
 
 /* BEGINS WHO WE ARE */
 #who-we-are{
+
+  .container-p{
+
+    h2{
+      text-align: center;
+
+    }
+  }
 .animated-container{
   height: 27vh;
   padding-left: 30px;
@@ -1202,19 +1210,40 @@ label{
 
 @media (min-width: 768px){
 
+  h2{
+    font-size: 50px;
+    line-height: 50px;
+    margin-bottom: 0;
+  }
+
+p{
+  margin-top: 0;
+  font-size: 16px;
+  line-height: 26px;
+}
+
 /* BEGINS HEADER 768 */
+header{
+
+h5{
+  font-size: 30px;
+  padding-top: 5px;
+  padding-bottom: 5px;
+}
 
 .dropdown-menu-custom{
   padding-top: 5px;
   max-width: 35px;
   height: auto;
 }
+} /* CLOSES HEADER */
 
 /* ENDS HEADER 768 */
 
 /* ----------------------------------------------------------------- */
 
 #container-2{
+  padding-top: 25vh;
 .image-container{
   position: relative;
   margin-top: 7vh;
