--- a/css/style.scss
+++ b/css/style.scss
@@ -101,6 +101,7 @@ font-weight: 900;
 color: $black;
 font-size: 36px;
 line-height: 34px;
+float: left;
 }
 
 h3{
@@ -372,6 +373,7 @@ text-decoration: none;
   list-style: none;
   margin-top: 10vh;
   padding-top: 10vh;
+  padding-left: 0;
   li{
 text-align: center;
 padding-left: 25px;
@@ -539,7 +541,7 @@ padding: 0;
     }
 
     .copy-container{
-
+      float: left;
       padding-top: 5vh;
       padding-bottom: 5vh;
     }
@@ -1262,6 +1264,22 @@ h5{
 
 @media (min-width: 1024px){
 
+
+/* HEADER */
+header{
+  padding-top: 10px;
+  max-height: 50px;
+
+.logo-container{
+  max-width: 35px;
+}
+
+h5{
+font-size: 16px;
+}
+
+} /* CLOSES HEADER */
+
 #nav{
   display: block;
   z-index: 300;
@@ -1289,12 +1307,16 @@ padding-right: 1vw;
   transition: 0s;
   margin-bottom: 0vh;
   float: left;
-  font-size: 13px;
+  font-size: 12px;
   }
   a{
   color: $black;
   text-decoration: none;
 
+  }
+  li:hover{
+    border-top: 5px solid $orange;
+    padding-top: 7.5px;
   }
   }
 
@@ -1302,30 +1324,38 @@ padding-right: 1vw;
     border-top: none;
     list-style: none;
     margin-top: 0vh;
-    padding-top: 12.5px;
+    padding-top: 10px;
+    padding-left: 0!important;
     float: left;
     li{
       text-align: center;
-    padding-top: 12.5px;
-    padding-left: 1vw;
-    padding-right: 1vw;
+    padding-top: 5px;
+    padding-bottom: 5px;
+    padding-left: 7.5px;
+    padding-right: 7.5px;
+    margin-right: 2px;
       font-family: gotham;
       letter-spacing: 2px;
       transition: 0s;
       margin-bottom: 0vh;
       float: left;
-      font-size: 13px;
+      font-size: 12px;
+      border: 1px solid lightgray;
     }
     a{
   color: $black;
   text-decoration: none;
     }
+    li:hover{
+      border: 1px solid $orange;
+      background-color: $orange;
+      a{
+      color: white;
+    }
+    }
   }
 
-  li:hover{
-    border-top: 5px solid $orange;
-    padding-top: 7.5px;
-  }
+
 
   .nav-item-1{
     animation-name: none;
@@ -1354,8 +1384,74 @@ padding-right: 1vw;
     border-bottom: 0;
   }
 
+#push-mobile{
+  img{
+    width: 40vw;
+  }
+}
 
 
 }/* !!CLOSES 1024PX @MEDIA QUERY!! */
 
 /* ----------------------------------------------------------------- */
+
+/* !!OPENS 1200PX @MEDIA QUERY!! */
+
+/* ----------------------------------------------------------------- */
+
+@media (min-width: 1200px){
+
+header{
+  .logo-container{
+    max-width: 150px;
+
+  }
+  h5{
+    font-size: 18px;
+    padding-top: 0;
+  }
+}
+.secondary-nav{
+  padding-right: 25px;
+  li{
+    float: right;
+  }
+}
+
+
+
+  #container-2{
+padding-top: 30vh;
+    h2{
+      text-align: right;
+      font-size: 70px;
+      line-height: 70px;
+      padding-right: 25px;
+    }
+
+    .copy-container{
+      padding-top: 0;
+    }
+  }
+
+  #featured-projects{
+    padding-top: 25vh;
+    .portfolio-list{
+      height: 50vh;
+    }
+  }
+
+  footer{
+    position: fixed;
+    bottom: 0;
+    height: 40px;
+    background-color: white;
+    z-index: 200;
+    padding-top: 7.5px;
+    img{
+      width: 25px!important;;
+      height: auto;
+    }
+  }
+
+} /* CLOSES 1200PX @MEDIA QUERY */
