--- a/css/style.css
+++ b/css/style.css
@@ -713,15 +713,17 @@ footer {
 /* ----------------------------------------------------------------- */
 /* BEGINS PORTFOLIO */
 /* PORTFOLIO PAGE */
+.portfolio-container {
+  float: left;
+  padding-top: 10vh;
+  padding-bottom: 10vh; }
+
 .aside-toggle {
   margin-top: 10vh;
   float: left; }
 
 .aside-display-toggle {
   display: block; }
-
-aside {
-  display: none; }
 
 #portfolio section {
   padding-top: 2vh;
@@ -1001,7 +1003,8 @@ aside {
   .secondary-nav {
     padding-right: 25px; }
     .secondary-nav li {
-      float: right; }
+      float: right;
+      margin-right: 15px; }
 
   #container-2 {
     padding-top: 30vh; }
@@ -1017,6 +1020,20 @@ aside {
     padding-top: 25vh; }
     #featured-projects .portfolio-list {
       height: 50vh; }
+
+  #who-we-are #featured-projects {
+    padding-top: 25vh; }
+    #who-we-are #featured-projects .container-p {
+      height: 50vh; }
+    #who-we-are #featured-projects .portfolio-list {
+      height: 50vh; }
+    #who-we-are #featured-projects .text-reveal {
+      height: 50vh;
+      padding-top: 20%; }
+    #who-we-are #featured-projects .animated-container {
+      height: 50vh; }
+      #who-we-are #featured-projects .animated-container h2 {
+        margin-top: 20%; }
 
   /* animation */
   #people .svg1 {
@@ -1052,6 +1069,14 @@ aside {
     to {
       transform: scale(16000) translateY(1200px) translateX(500px); } }
   /* CLOSE #PEOPLE */
+  #portfolio .portfolio-container .container-p {
+    height: 45vh;
+    margin-top: 10px; }
+  #portfolio .portfolio-container .portfolio-list {
+    height: 45vh; }
+  #portfolio .portfolio-container .image-container {
+    height: 50%; }
+
   footer {
     position: fixed;
     bottom: 0;
