--- a/css/style.css
+++ b/css/style.css
@@ -1051,23 +1051,23 @@ footer {
     width: 150vw; }
   @keyframes scale {
     to {
-      transform: scale(60000) translateY(1200px); } }
+      transform: scale(80000) translateY(1200px); } }
   #people .svg2 {
     position: fixed;
-    animation: scale2 1s ease infinite;
+    animation: scale2 5s linear infinite;
     animation-play-state: paused;
-    animation-delay: calc(var(--scroll) * .01s);
+    animation-delay: calc(var(--scroll) * -.01s);
     animation-iteration-count: 1;
     animation-fill-mode: both;
     top: 0;
     bottom: 0;
-    left: -100vw;
+    left: -25vw;
     right: 0;
     margin: auto;
-    width: 300vw; }
+    width: 150vw; }
   @keyframes scale2 {
     to {
-      transform: scale(16000) translateY(1200px) translateX(500px); } }
+      transform: scale(80000) translateY(5000px); } }
   /* CLOSE #PEOPLE */
   #portfolio .portfolio-container .container-p {
     height: 45vh;
